fixed image stretching issue

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -311,6 +311,7 @@ img {
 	height: 100%;
 	max-height: 80vh;
 	display: block;
+	object-fit: cover;
   }
 
   .image-item:hover {
